--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
 <link href="style.css" rel="stylesheet">
 </head>
 <body>
+<div class="nav">
+<ul>
+<div class="left-nav">
+<li>About Us</li>
+<li>Projections</li>
+</div>
+<center>
+<li>logo</li>
+</center>
+<div class="nav-right">
+<li>Opportunity</li>
+<li>Our Future</li>
+</div>
+</ul>
+</div>
+<div class="main">
 <center>
 <p>test</p>
 </center>
+</div>
+<div class="footer">
+
+</div>
 </body>
 </html>
