--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>INVESTORS</title>
-<link href="style.css" rel="stylesheet">
+<title>REVARUS</title> 
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
 </head>
 <body>
-<div class="nav">
-  <center>
-<ul>
-<div class="left-nav">
-<li>About Us</li>
-<li>Projections</li>
-</div>
-<li>logo</li>
-<div class="nav-right">
-<li>Opportunity</li>
-<li>Our Future</li>
-</div>
-</ul>
-  </center>
-</div>
-<div class="main">
-<center>
-<p>test</p>
-</center>
-</div>
-<div class="footer">
-
-</div>
+    <div class="nav">
+        <ul>
+            <center>
+            <div class="navlogo">
+            <li><a href="index.html"><img src="http://i.imgur.com/vcaxrtR.png" width="200px"></a></li>
+            </div>
+            <li><a href="aboutus.html">PROJECTIONS</a></li>
+            <li><a href="locations.html">ABOUT US</a></li>
+            <li><a href=".html">OPPORTUNITY</a></li>
+            <li><a href="contact.html">OUR FUTURE</a></li>
+            </center>
+        </ul>
+    </div>
+    <div class="main">
+    <center>
+    <p>
+        Web design for your business.
+        </p>
+        </center>
+    </div>
 </body>
 </html>
