--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <center>
             <div class="navlogo">
-            <li><a href="index.html"><img src="http://i.imgur.com/vcaxrtR.png" width="200px"></a></li>
+            <li><a href="index.html"><img src="revarus logo.png" width="200px"></a></li>
             </div>
             <li><a href="aboutus.html">PROJECTIONS</a></li>
             <li><a href="locations.html">ABOUT US</a></li>
