--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
     </div>
     <div class="main">
     <center>
-    <p>
-        Web design for your business.
-        </p>
+    <h1>
+        <b>The website you've always needed.</b>
+        </h1>
+        <p>At Revarus, we find it important to help small businesses put themselves online.
+            <br>Traditional websites can be expensive and unfit for your business.
+            <br>Providing high quality at an affordable price since 2017.</p>
         </center>
     </div>
 </body>
