--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     <h1>
         <b>The website you've always needed.</b>
         </h1>
+
         <p>At Revarus, we find it important to help small businesses put themselves online.
             <br>Traditional websites can be expensive and unfit for your business.
-            <br>Providing high quality at an affordable price since 2017.</p>
+            <br>Providing high quality at an affordable price since 2017.
+            <br>Every business needs a website. Get yours today!</p>
         </center>
     </div>
 </body>
