--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>
         <b>The website you've always needed.</b>
         </h1>
-
+        <img src="http://images.wisegeek.com/html-screen.jpg" width="600">
         <p>At Revarus, we find it important to help small businesses put themselves online.
             <br>Traditional websites can be expensive and unfit for your business.
             <br>Providing high quality at an affordable price since 2017.
