--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     </div>
     <div class="main">
     <center>
-    <h1>
+        <div class="header">
+    <p>
         <b>The website you've always needed.</b>
-        </h1>
+        </p>
+        </div>
         <img src="http://images.wisegeek.com/html-screen.jpg" width="600">
         <p>At Revarus, we find it important to help small businesses put themselves online.
             <br>Traditional websites can be expensive and unfit for your business.
