--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
         <b>The website you've always needed.</b>
         </p>
         </div>
-        <img src="http://images.wisegeek.com/html-screen.jpg" width="600">
+        <img src="http://images.wisegeek.com/html-screen.jpg" width="600" border="2">
         <p>At Revarus, we find it important to help small businesses put themselves online.
             <br>Traditional websites can be expensive and unfit for your business.
             <br>Providing high quality at an affordable price since 2017.
-            <br>Every business needs a website. Get yours today!</p>
+            <br>Every business needs a website. Get yours today!</p><br>
+        <img src="https://s-media-cache-ak0.pinimg.com/originals/07/8e/db/078edbfbd1f0e1fce981d45086320fc3.png" width="600" border="2">
+        <p>Located in Hamilton, we make it easy for local business to schedule consultations.
+            <br>For custom projects, we're with you every step of the way.
+            <br>Small changes to your website(s) free of cost.<p>
         </center>
     </div>
 </body>
